<resources>
    <string name="app_name">MarketPlaceProyecto</string>

    <string name="Item_Inicio">Inicio</string>
    <string name="Item_Chats">Chats</string>
    <string name="Item_Vender">Vender</string>
    <string name="Item_Mis_Anuncios">Mis anuncios</string>
    <string name="Item_Cuenta">Cuenta</string>

    <string name="TituloRl">Titulo</string>

    <string name="Ingresar_email">Ingresar con Email</string>
    <string name="Ingresar_google">Ingresar con Google</string>

    <string name="txt_login">Login de usuario</string>
    <string name="Et_email">Email</string>
    <string name="Et_password">Password</string>
    <string name="Btn_ingresar">Ingresar</string>
    <string name="Txt_no_cuenta">¿No tienes una cuenta?</string>
    <string name="Txt_registrarme">REGISTRARME</string>
    
    <string name="Txt_registro">Registro de usuario</string>
    <string name="Et_r_password">Repetir contraseña</string>
    <string name="Btn_registrar">Registrar</string>

   

    <!--Perfil del usuario-->
    <string name="Txt_perfil">Perfil de usuario</string>
    <string name="Txt_informacion">Informacion:</string>
    <string name="Txt_nombres">Nombres</string>
    <string name="Tv_nombres">Nombres completos</string>
    <string name="Txt_email">Email:</string>
    <string name="Tv_email">email@dominio.com</string>
    <string name="Txt_nacimiento">Fecha de nacimiento:</string>
    <string name="Tv_nacimiento">dd/mm/aaaa</string>
    <string name="Txt_mienbro">Mienbro desde:</string>
    <string name="Tv_mienbro">dd/mm/aaaa</string>
    <string name="Txt_telefono">Telefono: </string>
    <string name="Tv_telefono">999999999</string>
    <string name="Txt_estado_cuenta">Estado de cuenta: </string>
    <string name="Tv_estado_cuenta">No verificado</string>
    
    
    <string name="TxtOpciones">Opciones</string>
    <string name="Btn_editar_perfil">Editar perfil</string>

    <string name="Btn_cerrar_sesion">Cerrar sesion</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>